Upgrade to Gradle 2.12